// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article/Codebox Default smoke-test 1`] = `
<pre>
  <div>
    <div>
      <button type="button">
        js
      </button>
    </div>
    <button type="button">
      copy
    </button>
  </div>
  <div>
    <span>
      const
    </span>
    a
    <span>
      =
    </span>
    <span>
      1
    </span>
    <span>
      ;
    </span>
  </div>
</pre>
`;

exports[`Article/Codebox MultiLang smoke-test 1`] = `
<pre>
  <div>
    <div>
      <button type="button">
        cjs
      </button>
      <button type="button">
        mjs
      </button>
    </div>
    <button type="button">
      copy
    </button>
  </div>
  <div>
    <span>
      const
    </span>
    http
    <span>
      =
    </span>
    <span>
      require
    </span>
    <span>
      (
    </span>
    <span>
      'http'
    </span>
    <span>
      )
    </span>
    <span>
      ;
    </span>
  </div>
</pre>
`;
